<resources>
    <string name="app_name">Bookify</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="text_name">"Name"</string>
    <string name="text_email">"Email"</string>
    <string name="text_password">"Password"</string>
    <string name="button_login">"Login"</string>
    <string name="button_register">"Register"</string>
    <string name="button_logout">"Logout"</string>
    <string name="text_register">"Register"</string>
    <string name="button_forgot">"Forgot Password?"</string>
    <string name="button_resetpass">"Reset Password?"</string>
    <string name="text_contributor">"Contributor : "</string>

    <string name="search_search_here">"Search Here…"</string>
    <string name="search_buttondesc">"Search Bar Button"</string>
    <string name="search_clear">"Clear"</string>
    <string name="search_title">"Book Title"</string>
    <string name="search_author">"Author"</string>

    <string name="title">"Title"</string>

    <string-array name="category_list">
        <item>Category1</item>
        <item>Category2</item>
        <item>Category3</item>
        <item>Category4</item>
        <item>Category5</item>
    </string-array>


</resources>