<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".homenav.profile.ProfileFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textContributor"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_roundtop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/buttonUpload"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_roundall"
            android:fontFamily="@font/athiti_medium"
            android:text="Delete"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_darkblue"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/button_logout"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/buttonLogout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_roundall"
            android:fontFamily="@font/athiti_medium"
            android:text="Upload"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textContributor"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignEnd="@+id/imageView3"
        android:text="@string/text_contributor"
        android:textColor="@color/colorWhite" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="112dp"
        android:layout_height="135dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/component_22__1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imageView4"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="85dp"
        android:layout_toStartOf="@+id/imageView3"
        android:fontFamily="@font/athiti_semibold"
        android:gravity="left"
        android:paddingStart="20dp"
        android:text="My Account"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/text_name"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/profileTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTextName"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/text_email"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />


</RelativeLayout>