<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBlue"
    tools:context=".homenav.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/search_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_roundbottom"
                android:minHeight="?attr/actionBarSize"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.Toolbar>

            <Button
                android:id="@+id/searchClear"
                android:layout_width="41dp"
                android:layout_height="26dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/athiti_medium"
                android:text="@string/search_clear"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchText"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/searchText"
                android:imeOptions="actionSearch"
                android:layout_width="253dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_roundright"
                android:ems="10"
                android:fontFamily="@font/athiti"
                android:gravity="center_vertical"
                android:hint="@string/search_search_here"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="0dp"
                android:textColor="#999999"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/bg_roundleft"
                android:contentDescription="@string/search_buttondesc"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_baseline_search_24"
                android:tint="#004DAD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/searchText"
                app:layout_constraintStart_toStartOf="@+id/search_toolbar"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="99dp" />

</RelativeLayout>