<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".homenav.library.LibraryFragment">

    <TextView
        android:id="@+id/library_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/athiti_semibold"
        android:gravity="left"
        android:paddingStart="20dp"
        android:text="My Library"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_total_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_bar"
        android:layout_below="@+id/library_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/athiti"
        android:gravity="left"
        android:paddingStart="20dp"
        android:text="0 Books"
        android:textColor="@color/colorWhite"
        android:textSize="23sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerviewlib"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp">


        <Button
            android:id="@+id/librarySearchClear"
            android:layout_width="41dp"
            android:layout_height="26dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/athiti_medium"
            android:text="@string/search_clear"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/librarySearchText"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_roundright"
            android:ems="10"
            android:fontFamily="@font/athiti"
            android:gravity="center_vertical"
            android:hint="@string/search_search_here"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:textColor="#999999"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/librarySearchClear"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/librarySearchButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/librarySearchButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_roundleft"
            android:contentDescription="@string/search_buttondesc"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/ic_baseline_search_24"
            android:tint="#004DAD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewlib"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_roundtop" />
</RelativeLayout>